update on bridge get auote
